# Linux-example

./: CMakeLists.txt
audio/: CMakeLists.txt  alsa_capture.c  alsa_play.c  wave.h
canbus/: CMakeLists.txt  can_receive.c  can_send.c
framebuffer/: CMakeLists.txt  fb_test.c
gpio-legacy/: CMakeLists.txt  gpio_key.c
gpio-libgpiod/: CMakeLists.txt  libgpiod-led.c
i2ceeprom/: CMakeLists.txt  i2ceeprom_test.c
network/: CMakeLists.txt  tcp_client.c  tcp_server.c
rpmsg/: CMakeLists.txt  rpmsg.c
rtc/: CMakeLists.txt  rtc_test.c
serialport/: CMakeLists.txt  rs485_receive.c  rs485_send.c  serial.c  serial.h  uart_select.c  uart_test.c
spi/: CMakeLists.txt
timer/: CMakeLists.txt  posix-timer.c
watchdog/: CMakeLists.txt  watchdog.c
